  * d/b/test-patches: Change ABI name to make packages co-installable
  * d/b/test-patches: Make debug info optional and disabled by default
  * d/b/test-patches: Build a linux-headers-common package as well
    (Closes: #871216)
  * d/b/test-patches: Tolerate missing d/control, d/rules.gen, or d/p/test
  * d/b/test-patches: Detect flavour correctly when running backported kernel

 -- Ben Hutchings <benh@debian.org>  Mon, 19 Jun 2023 22:00:48 +0200

linux (5.10.179-1) bullseye-security; urgency=high

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.10.179
    - [arm64] dts: qcom: ipq8074-hk01: enable QMP device, not the PHY node
    - netfilter: br_netfilter: fix recent physdev match breakage
    - [arm64,armhf] regulator: fan53555: Explicitly include bits header
    - net: sched: sch_qfq: prevent slab-out-of-bounds in qfq_activate_agg
      (CVE-2023-31436)
    - virtio_net: bugfix overflow inside xdp_linearize_page()
    - sfc: Split STATE_READY in to STATE_NET_DOWN and STATE_NET_UP.
    - sfc: Fix use-after-free due to selftest_work
    - netfilter: nf_tables: fix ifdef to also consider nf_tables=m
    - i40e: fix accessing vsi->active_filters without holding lock
    - i40e: fix i40e_setup_misc_vector() error handling
    - mlxfw: fix null-ptr-deref in mlxfw_mfa2_tlv_next()
    - net: rpl: fix rpl header size calculation
    - bpf: Fix incorrect verifier pruning due to missing register precision
      taints
    - e1000e: Disable TSO on i219-LM card to increase speed
    - f2fs: Fix f2fs_truncate_partial_nodes ftrace event
    - Input: i8042 - add quirk for Fujitsu Lifebook A574/H
    - scsi: megaraid_sas: Fix fw_crash_buffer_show()
    - scsi: core: Improve scsi_vpd_inquiry() checks
    - [s390x] ptrace: fix PTRACE_GET_LAST_BREAK error handling
    - nvme-tcp: fix a possible UAF when failing to allocate an io queue
    - xen/netback: use same error messages for same errors