@@ -256,6 +256,8 @@ Several build profiles are understood and supported:
 - noudeb: Exclude installer udeb packages
 - pkg.linux.notools: Exclude userland tool packages (linux-kbuild-<version>,
   linux-perf-<version>, etc.)
+- pkg.linux.mintools: Build minimal set of userland tool packages
+  (linux-kbuild-<version>, linux-bootwrapper-<abiname> on powerpc/ppc64)
 - pkg.linux.nokernel: Exclude kernel image and header packages
 - pkg.linux.nosource: Exclude source binary package (linux-source-<version>)
 - cross: Needed when cross-building.  Currently this must be used together
