@@ -1,5 +1,5 @@
 Package: bpftool
-Build-Profiles: <!stage1 !pkg.linux.notools>
+Build-Profiles: <!stage1 !pkg.linux.notools !pkg.linux.mintools>
 Section: devel
 Architecture: linux-any
 Build-Depends:
@@ -12,7 +12,7 @@ Description: Inspection and simple manipulation of BPF programs and maps
  Berkeley Packet Filter (BPF) objects on the system.
 
 Package: linux-cpupower
-Build-Profiles: <!stage1 !pkg.linux.notools>
+Build-Profiles: <!stage1 !pkg.linux.notools !pkg.linux.mintools>
 Section: admin
 Architecture: linux-any
 Build-Depends:
@@ -27,7 +27,7 @@ Description: CPU power management tools for Linux
  ${cpupower:Arch-Description}
 
 Package: libcpupower1
-Build-Profiles: <!stage1 !pkg.linux.notools>
+Build-Profiles: <!stage1 !pkg.linux.notools !pkg.linux.mintools>
 Section: libs
 Architecture: linux-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -38,7 +38,7 @@ Description: CPU frequency and voltage scaling tools for Linux (libraries)
  This package contains the shared library.
 
 Package: libcpupower-dev
-Build-Profiles: <!stage1 !pkg.linux.notools>
+Build-Profiles: <!stage1 !pkg.linux.notools !pkg.linux.mintools>
 Section: libdevel
 Architecture: linux-any
 Depends: ${misc:Depends}, libcpupower1 (= ${binary:Version})
@@ -52,7 +52,7 @@ Description: CPU frequency and voltage scaling tools for Linux (development file
  This package is needed to compile programs against libcpupower.
 
 Package: usbip
-Build-Profiles: <!stage1 !pkg.linux.notools>
+Build-Profiles: <!stage1 !pkg.linux.notools !pkg.linux.mintools>
 Architecture: linux-any
 Build-Depends:
  autoconf,
@@ -82,7 +82,7 @@ Description: USB device sharing system over IP network
  client tool 'usbip'.
 
 Package: hyperv-daemons
-Build-Profiles: <!stage1 !pkg.linux.notools>
+Build-Profiles: <!stage1 !pkg.linux.notools !pkg.linux.mintools>
 Architecture: i386 amd64 x32
 Pre-Depends: ${misc:Pre-Depends}
 Depends: lsb-base, ${shlibs:Depends}, ${misc:Depends}
