@@ -7,7 +7,7 @@ Description: Kbuild infrastructure for Linux @version@
  This package provides the kbuild infrastructure for the headers packages for Linux kernel version @version@.
 
 Package: linux-perf-@version@
-Build-Profiles: <!stage1 !pkg.linux.notools !nopython>
+Build-Profiles: <!stage1 !pkg.linux.notools !pkg.linux.mintools !nopython>
 Section: devel
 Architecture: alpha amd64 arm64 armel armhf hppa i386 mips mips64 mips64el mipsel mipsn32 mipsn32el mipsr6 mipsr6el mipsn32r6 mipsn32r6el mips64r6 mips64r6el powerpc ppc64 ppc64el riscv64 s390 s390x sh4 sparc sparc64
 Build-Depends:
