@@ -1,5 +1,5 @@
 Package: linux-perf@source_suffix@
-Build-Profiles: <!stage1 !pkg.linux.notools !nopython !pkg.linux.nometa>
+Build-Profiles: <!stage1 !pkg.linux.notools !pkg.linux.mintools !nopython !pkg.linux.nometa>
 Architecture: alpha amd64 arm64 armel armhf hppa i386 mips mips64 mips64el mipsel mipsn32 mipsn32el mipsr6 mipsr6el mipsn32r6 mipsn32r6el mips64r6 mips64r6el powerpc ppc64 ppc64el riscv64 s390 s390x sh4 sparc sparc64
 Depends: linux-perf-@version@ (= ${binary:Version}), ${misc:Depends}
 Description: Performance analysis tools for Linux (meta-package)
