@@ -8,6 +8,7 @@ linux (5.10.179-2) UNRELEASED; urgency=medium
     (Closes: #871216)
   * d/b/test-patches: Tolerate missing d/control, d/rules.gen, or d/p/test
   * d/b/test-patches: Detect flavour correctly when running backported kernel
+  * Add pkg.linux.mintools profile for building minimal userland tools
 
  -- Ben Hutchings <benh@debian.org>  Mon, 19 Jun 2023 22:00:48 +0200
 
